style: Reduce banner image container to 70% on desktop screens to prevent the image overflowing below the fold.

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -561,7 +561,7 @@ footer {
     }
 
     .banner-image-container {
-        width: 80%;
+        width: 70%;
     }
 
     .navbar-expand-lg .navbar-nav .nav-link {
